# backend/src/routers/API/AuthRouter.ts
@@ -7,6 +7,6 @@ const AuthRouter = Router();
 
 AuthRouter.post('/signup', AuthMiddleware.isntAuthenticate, AuthController.signup);
 AuthRouter.post('/signin', AuthMiddleware.isntAuthenticate, AuthController.signIn);
-//AuthRouter.get('/forgottenpassword', AuthMiddleware.isntAuthenticate, AuthController.forgottenPassword);
+AuthRouter.post('/forgottenpassword', AuthMiddleware.isntAuthenticate, AuthController.forgottenPassword);
 
 export default AuthRouter;
